Does not currently compile completely: work in progress. Removing dacx arguments and passing in needed classes to make dependencies more explicit.