@@ -17,15 +17,17 @@
 **    Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
 
-
 package org.systemsbiology.biotapestry.app;
 
 import java.util.HashMap;
 import java.util.Map;
 
+import javax.swing.tree.TreeNode;
+
 import org.systemsbiology.biotapestry.cmd.MainCommands;
 import org.systemsbiology.biotapestry.cmd.flow.ControlFlow;
 import org.systemsbiology.biotapestry.cmd.flow.FlowMeister;
+import org.systemsbiology.biotapestry.nav.NavTree;
 import org.systemsbiology.biotapestry.nav.ZoomChangeTracker;
 
 /****************************************************************************
@@ -50,6 +52,7 @@ public class VirtualZoomControls implements ZoomChangeTracker {
   private UIComponentSource uics_;
   private CmdSource cSrc_;
   private HashMap<FlowMeister.FlowKey, Boolean> buttonStat_;
+  private DynamicDataAccessContext ddacx_;
   
   ////////////////////////////////////////////////////////////////////////////
   //
@@ -62,9 +65,10 @@ public class VirtualZoomControls implements ZoomChangeTracker {
   ** Constructor 
   */ 
   
-  public VirtualZoomControls(UIComponentSource uics, CmdSource cSrc) {
+  public VirtualZoomControls(UIComponentSource uics, DynamicDataAccessContext ddacx, CmdSource cSrc) {
     uics_ = uics;
     cSrc_ = cSrc;
+    ddacx_ = ddacx;
     buttonStat_ = new HashMap<FlowMeister.FlowKey, Boolean>();
   }  
    
@@ -114,12 +118,27 @@ public class VirtualZoomControls implements ZoomChangeTracker {
     // Enable/disable zoom actions based on zoom limits:
     //
     MainCommands mcmd = cSrc_.getMainCmds();
+    TreeNode tn = uics_.getTree().getSelectionNode();
+    NavTree navTree = ddacx_.getGenomeSource().getModelHierarchy();
+    boolean shutOffZoom = (tn == null); 
+    if (!shutOffZoom) {
+      shutOffZoom = navTree.isGroupNode(tn);
+    }
+    if (!shutOffZoom) {
+      shutOffZoom = (navTree.getGenomeID(tn) == null) && (navTree.getDynamicProxyID(tn) == null);
+    }
+  
     if (!uics_.isHeadless()) {
       MainCommands.ChecksForEnabled zaOutWI = mcmd.getCachedActionIfPresent(FlowMeister.MainFlow.ZOOM_OUT, true);
       MainCommands.ChecksForEnabled zaOutNI = mcmd.getCachedActionIfPresent(FlowMeister.MainFlow.ZOOM_OUT, false);
       MainCommands.ChecksForEnabled zaInWI = mcmd.getCachedActionIfPresent(FlowMeister.MainFlow.ZOOM_IN, true);
-      MainCommands.ChecksForEnabled zaInNI = mcmd.getCachedActionIfPresent(FlowMeister.MainFlow.ZOOM_IN, false);            
-      if (uics_.getZoomCommandSupport().zoomIsWide()) {
+      MainCommands.ChecksForEnabled zaInNI = mcmd.getCachedActionIfPresent(FlowMeister.MainFlow.ZOOM_IN, false);      
+      if (shutOffZoom) {
+        zaOutWI.setConditionalEnabled(false);
+        if (zaOutNI != null) zaOutNI.setConditionalEnabled(false);
+        zaInWI.setConditionalEnabled(false);
+        if (zaInNI != null) zaInNI.setConditionalEnabled(false);
+      } else if (uics_.getZoomCommandSupport().zoomIsWide()) {
         zaOutWI.setConditionalEnabled(false);
         if (zaOutNI != null) zaOutNI.setConditionalEnabled(false);
         zaInWI.setConditionalEnabled(true);
@@ -146,16 +165,19 @@ public class VirtualZoomControls implements ZoomChangeTracker {
       if (!ziFlow.externallyEnabled()) {
         throw new IllegalStateException();
       }
-           
-      if (uics_.getZoomCommandSupport().zoomIsWide()) {
-        buttonStat_.put(FlowMeister.MainFlow.ZOOM_OUT, new Boolean(false));   
-        buttonStat_.put(FlowMeister.MainFlow.ZOOM_IN, new Boolean(true));
+       
+      if (shutOffZoom) {
+        buttonStat_.put(FlowMeister.MainFlow.ZOOM_OUT, Boolean.valueOf(false));   
+        buttonStat_.put(FlowMeister.MainFlow.ZOOM_IN, Boolean.valueOf(false));
+      } else if (uics_.getZoomCommandSupport().zoomIsWide()) {
+        buttonStat_.put(FlowMeister.MainFlow.ZOOM_OUT, Boolean.valueOf(false));   
+        buttonStat_.put(FlowMeister.MainFlow.ZOOM_IN, Boolean.valueOf(true));
       } else if (uics_.getZoomCommandSupport().zoomIsMax()) {
-        buttonStat_.put(FlowMeister.MainFlow.ZOOM_OUT, new Boolean(true));   
-        buttonStat_.put(FlowMeister.MainFlow.ZOOM_IN, new Boolean(false));   
+        buttonStat_.put(FlowMeister.MainFlow.ZOOM_OUT, Boolean.valueOf(true));   
+        buttonStat_.put(FlowMeister.MainFlow.ZOOM_IN, Boolean.valueOf(false));   
       } else {
-        buttonStat_.put(FlowMeister.MainFlow.ZOOM_OUT, new Boolean(true));   
-        buttonStat_.put(FlowMeister.MainFlow.ZOOM_IN, new Boolean(true));
+        buttonStat_.put(FlowMeister.MainFlow.ZOOM_OUT, Boolean.valueOf(true));   
+        buttonStat_.put(FlowMeister.MainFlow.ZOOM_IN, Boolean.valueOf(true));
       }
     }
     return;
